# django-base-settings

./: README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
django_base_settings/: __init__.py  django_base_settings.py
tests/: conftest.py  test_settings.py
